@@ -43,3 +43,24 @@ def test_pkgresources_version_matches_init():
     import pkg_resources
     ver = devpi.__version__
     assert pkg_resources.get_distribution("devpi_client").version == ver
+
+
+def test_version(loghub):
+    from devpi.main import print_version
+    loghub.debug = lambda self, *msg: None
+    print_version(loghub)
+    lines = list(filter(None, loghub._getmatcher().lines))
+    assert len(lines) == 1
+    assert lines[0].startswith('devpi-client')
+
+
+def test_version_server(loghub, url_of_liveserver):
+    from devpi.main import print_version
+    loghub.debug = lambda self, *msg: None
+    loghub.current.configure_fromurl(loghub, url_of_liveserver.url)
+    print_version(loghub)
+    lines = list(filter(None, loghub._getmatcher().lines))
+    assert len(lines) > 2
+    names = [x.strip().split()[0] for x in lines]
+    assert 'devpi-client' in names
+    assert 'devpi-server' in names
