@@ -50,7 +50,7 @@ copyright = u'2016, holger krekel and merlinux GmbH see http://merlinux.eu, cat 
 # The short X.Y version.
 version = '2.6'
 # The full version, including alpha/beta/rc tags.
-release = '2.6.0'
+release = 'server 2.6.0, client 2.4.1 and web 2.6.0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
